@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><title>Release Summary - asterisk-13.28.0-rc1</title><h1 align="center"><a name="top">Release Summary</a></h1><h3 align="center">asterisk-13.28.0-rc1</h3><h3 align="center">Date: 2019-07-18</h3><h3 align="center">&lt;asteriskteam@digium.com&gt;</h3><hr><h2 align="center">Table of Contents</h2><ol>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><title>Release Summary - asterisk-13.28.0</title><h1 align="center"><a name="top">Release Summary</a></h1><h3 align="center">asterisk-13.28.0</h3><h3 align="center">Date: 2019-07-25</h3><h3 align="center">&lt;asteriskteam@digium.com&gt;</h3><hr><h2 align="center">Table of Contents</h2><ol>
 <li><a href="#summary">Summary</a></li>
 <li><a href="#contributors">Contributors</a></li>
 <li><a href="#closed_issues">Closed Issues</a></li>
@@ -6,7 +6,7 @@
 <li><a href="#diffstat">Diffstat</a></li>
 </ol><hr><a name="summary"><h2 align="center">Summary</h2></a><center><a href="#top">[Back to Top]</a></center><p>This release is a point release of an existing major version. The changes included were made to address problems that have been identified in this release series, or are minor, backwards compatible new features or improvements. Users should be able to safely upgrade to this version if this release series is already in use. Users considering upgrading from a previous version are strongly encouraged to review the UPGRADE.txt document as well as the CHANGES document for information about upgrading to this release series.</p><p>The data in this summary reflects changes that have been made since the previous release, asterisk-13.27.0.</p><hr><a name="contributors"><h2 align="center">Contributors</h2></a><center><a href="#top">[Back to Top]</a></center><p>This table lists the people who have submitted code, those that have tested patches, as well as those that reported issues on the issue tracker that were resolved in this release. For coders, the number is how many of their patches (of any size) were committed into this release. For testers, the number is the number of times their name was listed as assisting with testing a patch. Finally, for reporters, the number is the number of issues that they reported that were affected by commits that went into this release.</p><table width="100%" border="0">
 <tr><th width="33%">Coders</th><th width="33%">Testers</th><th width="33%">Reporters</th></tr>
-<tr valign="top"><td width="33%">8 Alexei Gradinari <alex2grad@gmail.com><br/>7 George Joseph <gjoseph@digium.com><br/>3 Joshua Colp <jcolp@digium.com><br/>2 Asterisk Development Team <asteriskteam@digium.com><br/>2 Chris-Savinovich <csavinovich@digium.com><br/>1 Sean Bright <sean.bright@gmail.com><br/>1 Abhay Gupta <abhay@avissol.com><br/>1 Francesco Castellano <francesco.castellano@messagenet.it><br/>1 Ben Ford <bford@digium.com><br/>1 Guido Falsi <madpilot@FreeBSD.org><br/>1 Nasir Iqbal <nasir@ictinnovations.com><br/></td><td width="33%"><td width="33%">1 Gil Richard <grichard@intertalksystems.com><br/>1 Oleksandr Natalenko<br/>1 Oleksandr Natalenko <oleksandr@natalenko.name><br/>1 Nasir Iqbal <nasir@ictinnovations.com><br/>1 Guido Falsi <madpilot@freebsd.org><br/>1 abelbeck <lonnie@abelbeck.com><br/>1 Bernhard Schmidt<br/>1 Abhay Gupta <abhay@avissol.com><br/>1 Gil Richard<br/>1 vijay kumar <vijaykumar@drishti-soft.com><br/>1 pasandev <pasandev@ymail.com><br/>1 Francesco Castellano <francesco.castellano@messagenet.it><br/>1 Joshua C. Colp <jcolp@digium.com><br/>1 Bernhard Schmidt <berni@birkenwald.de><br/>1 Gregory Massel <greg@csurf.co.za><br/>1 Dmitry Svyatogorov <ds@vo-ix.ru><br/></td></tr>
+<tr valign="top"><td width="33%">8 Alexei Gradinari <alex2grad@gmail.com><br/>7 George Joseph <gjoseph@digium.com><br/>3 Asterisk Development Team <asteriskteam@digium.com><br/>3 Joshua Colp <jcolp@digium.com><br/>2 Chris-Savinovich <csavinovich@digium.com><br/>1 Sean Bright <sean.bright@gmail.com><br/>1 Abhay Gupta <abhay@avissol.com><br/>1 Francesco Castellano <francesco.castellano@messagenet.it><br/>1 Ben Ford <bford@digium.com><br/>1 Guido Falsi <madpilot@FreeBSD.org><br/>1 Nasir Iqbal <nasir@ictinnovations.com><br/></td><td width="33%"><td width="33%">1 Gil Richard <grichard@intertalksystems.com><br/>1 Oleksandr Natalenko<br/>1 Oleksandr Natalenko <oleksandr@natalenko.name><br/>1 Nasir Iqbal <nasir@ictinnovations.com><br/>1 Guido Falsi <madpilot@freebsd.org><br/>1 abelbeck <lonnie@abelbeck.com><br/>1 Bernhard Schmidt<br/>1 Abhay Gupta <abhay@avissol.com><br/>1 Gil Richard<br/>1 vijay kumar <vijaykumar@drishti-soft.com><br/>1 pasandev <pasandev@ymail.com><br/>1 Francesco Castellano <francesco.castellano@messagenet.it><br/>1 Joshua C. Colp <jcolp@digium.com><br/>1 Bernhard Schmidt <berni@birkenwald.de><br/>1 Gregory Massel <greg@csurf.co.za><br/>1 Dmitry Svyatogorov <ds@vo-ix.ru><br/></td></tr>
 </table><hr><a name="closed_issues"><h2 align="center">Closed Issues</h2></a><center><a href="#top">[Back to Top]</a></center><p>This is a list of all issues from the issue tracker that were closed by changes that went into this release.</p><h3>Security</h3><h4>Category: Channels/chan_sip/Interoperability</h4><a href="https://issues.asterisk.org/jira/browse/ASTERISK-28465">ASTERISK-28465</a>: Broken SDP can cause a segfault in a T.38 reINVITE<br/>Reported by: Francesco Castellano<ul>
 <li><a href="https://code.asterisk.org/code/changelog/asterisk?cs=1318a3a2b7ded25de7ddbac1d4f5a4f3af846912">[1318a3a2b7]</a> Francesco Castellano -- chan_sip: Handle invalid SDP answer to T.38 re-invite</li>
 </ul><br><h4>Category: Resources/res_pjsip_messaging</h4><a href="https://issues.asterisk.org/jira/browse/ASTERISK-28447">ASTERISK-28447</a>: res_pjsip_messaging: In-dialog MESSAGE with no body causes crash<br/>Reported by: Gil Richard<ul>
@@ -37,6 +37,7 @@
 <li><a href="https://code.asterisk.org/code/changelog/asterisk?cs=1ea9bad34d3b6fe2bfba0bc133ac56293cd4436f">[1ea9bad34d]</a> Joshua Colp -- res_rtp_asterisk: Add support for DTLS packet fragmentation.</li>
 </ul><br><hr><a name="commits"><h2 align="center">Commits Not Associated with an Issue</h2></a><center><a href="#top">[Back to Top]</a></center><p>This is a list of all changes that went into this release that did not reference a JIRA issue.</p><table width="100%" border="1">
 <tr><th>Revision</th><th>Author</th><th>Summary</th></tr>
+<tr><td><a href="https://code.asterisk.org/code/changelog/asterisk?cs=b25e1231dd69fc9d4f74a7605648d46793089a0d">b25e1231dd</a></td><td>Asterisk Development Team</td><td>Update for 13.28.0-rc1</td></tr>
 <tr><td><a href="https://code.asterisk.org/code/changelog/asterisk?cs=b3d0754f820e2aae1bab972310555176f8929c15">b3d0754f82</a></td><td>Asterisk Development Team</td><td>Update CHANGES and UPGRADE.txt for 13.28.0</td></tr>
 <tr><td><a href="https://code.asterisk.org/code/changelog/asterisk?cs=3cb839d1118d5d7330818bb7b3bd350bbff0fa2d">3cb839d111</a></td><td>Joshua Colp</td><td>res_rtp_asterisk: Move where DTLS MTU variable is defined.</td></tr>
 <tr><td><a href="https://code.asterisk.org/code/changelog/asterisk?cs=ba57b004c400b37dd8d16ab2845a2f83a0288d7a">ba57b004c4</a></td><td>Sean Bright</td><td>pjproject: Update to 2.9 release</td></tr>
@@ -52,19 +53,20 @@
 <tr><td><a href="https://code.asterisk.org/code/changelog/asterisk?cs=dfa513c56589b4e6167fed4a230da59c13a30389">dfa513c565</a></td><td>Alexei Gradinari</td><td>res_fax: add channel name to CLI 'fax show session'</td></tr>
 <tr><td><a href="https://code.asterisk.org/code/changelog/asterisk?cs=6aeab9d5e7a05332842a48de820a5b62a6f7fe29">6aeab9d5e7</a></td><td>Ben Ford</td><td>build: Fix file format in CHANGES-staging.</td></tr>
 <tr><td><a href="https://code.asterisk.org/code/changelog/asterisk?cs=6ded762dbfa3bdfad6148ea6b90a3f0f3761f399">6ded762dbf</a></td><td>Alexei Gradinari</td><td>app_readexten: new option 'p' to stop reading on '#' key</td></tr>
-</table><hr><a name="diffstat"><h2 align="center">Diffstat Results</h2></a><center><a href="#top">[Back to Top]</a></center><p>This is a summary of the changes to the source code that went into this release that was generated using the diffstat utility.</p><pre>.lastclean                                                                                      |    1
-.version                                                                                        |    1
-ChangeLog                                                                                       |66105 ----------
-asterisk-13.27.0-summary.html                                                                   |  182
-asterisk-13.27.0-summary.txt                                                                    |  461
+</table><hr><a name="diffstat"><h2 align="center">Diffstat Results</h2></a><center><a href="#top">[Back to Top]</a></center><p>This is a summary of the changes to the source code that went into this release that was generated using the diffstat utility.</p><pre>asterisk-13.27.0-summary.html                                                                   |  182 ---
+asterisk-13.27.0-summary.txt                                                                    |  461 ----------
+b/.version                                                                                      |    2
 b/CHANGES                                                                                       |   23
+b/ChangeLog                                                                                     |  458 +++++++++
 b/apps/app_amd.c                                                                                |    2
-b/apps/app_attended_transfer.c                                                                  |  143
-b/apps/app_blind_transfer.c                                                                     |  137
-b/apps/app_confbridge.c                                                                         |  157
+b/apps/app_attended_transfer.c                                                                  |  143 +++
+b/apps/app_blind_transfer.c                                                                     |  137 ++
+b/apps/app_confbridge.c                                                                         |  157 +++
 b/apps/app_readexten.c                                                                          |   11
 b/apps/confbridge/confbridge_manager.c                                                          |   27
 b/apps/confbridge/include/confbridge.h                                                          |   12
+b/asterisk-13.28.0-rc1-summary.html                                                             |  104 ++
+b/asterisk-13.28.0-rc1-summary.txt                                                              |  288 ++++++
 b/cdr/cdr_pgsql.c                                                                               |   24
 b/channels/chan_dahdi.c                                                                         |   16
 b/channels/chan_pjsip.c                                                                         |   34
@@ -72,7 +74,7 @@ b/channels/chan_sip.c                                                           
 b/channels/sig_analog.c                                                                         |    7
 b/channels/sig_pri.c                                                                            |    7
 b/configs/samples/rtp.conf.sample                                                               |    4
-b/configure                                                                                     |  112
+b/configure                                                                                     |  112 ++
 b/configure.ac                                                                                  |    2
 b/include/asterisk/autoconfig.h.in                                                              |    3
 b/include/asterisk/stasis_bridges.h                                                             |   23
@@ -83,22 +85,16 @@ b/main/translate.c                                                              
 b/menuselect/configure                                                                          |   14
 b/menuselect/example_menuselect-tree                                                            |    4
 b/menuselect/test/menuselect-tree                                                               |    4
-b/res/res_fax.c                                                                                 |   57
+b/res/res_fax.c                                                                                 |   57 -
 b/res/res_pjsip_messaging.c                                                                     |    9
 b/res/res_pjsip_sdp_rtp.c                                                                       |    6
-b/res/res_rtp_asterisk.c                                                                        |  198
+b/res/res_rtp_asterisk.c                                                                        |  198 +++-
 b/tests/CI/buildAsterisk.sh                                                                     |    2
 b/tests/CI/findLibdir.sh                                                                        |   14
-b/third-party/pjproject/patches/0010-ssl_sock_ossl-sip_transport_tls-Add-peer-to-error-me.patch |  157
-contrib/realtime/mysql/mysql_cdr.sql                                                            |   33
-contrib/realtime/mysql/mysql_config.sql                                                         | 1183
-contrib/realtime/mysql/mysql_voicemail.sql                                                      |   35
-contrib/realtime/postgresql/postgresql_cdr.sql                                                  |   37
-contrib/realtime/postgresql/postgresql_config.sql                                               | 1281
-contrib/realtime/postgresql/postgresql_voicemail.sql                                            |   39
+b/third-party/pjproject/patches/0010-ssl_sock_ossl-sip_transport_tls-Add-peer-to-error-me.patch |  157 +++
 third-party/pjproject/patches/0010-outgoing_connected_line_method_update.patch                  |   33
 third-party/pjproject/patches/0020-Fixed-2172-Avoid-double-reference-counter-decrements.patch   |   42
 third-party/pjproject/patches/0030-Re-2176-Removed-pop_freelist-push_freelist-after-rem.patch   |   37
-third-party/pjproject/patches/0031-Re-2191-transport-timer-cleanup.patch                        |  372
-third-party/pjproject/patches/0032-Re-2191-Fixed-crash-in-SIP-transport-destroy-due-to-.patch   |   98
-49 files changed, 1178 insertions(+), 70053 deletions(-)</pre><br></html>
+third-party/pjproject/patches/0031-Re-2191-transport-timer-cleanup.patch                        |  372 --------
+third-party/pjproject/patches/0032-Re-2191-Fixed-crash-in-SIP-transport-destroy-due-to-.patch   |   94 --
+44 files changed, 2027 insertions(+), 1337 deletions(-)</pre><br></html>
