@@ -1,3 +1,7 @@
+2019-07-25 09:35 +0000  Asterisk Development Team <asteriskteam@digium.com>
+
+	* asterisk 13.28.0 Released.
+
 2019-07-18 11:10 +0000  Asterisk Development Team <asteriskteam@digium.com>
 
 	* asterisk 13.28.0-rc1 Released.
